main.css
:root {
  --color-primary: var(--clr-candidate-20);
  --color-primary-lighter: var(--clr-noxor-blue-lighter);
  --color-primary-light: var(--clr-noxor-blue-highlight);


  --color-primary-text: var(black);
  /* --color-primary-light: var(--clr-candidate-25); */
  /* --color-primary-lighter: var(--clr-candidate-26); */
  --color-primary-lighter-hover: var(--clr-candidate-27);
  --color-white: #fff;
  --color-complementary: #5c2d1f;
  --color-slider: var(--clr-candidate-20);

  --clr-noxor-blue: hsl(217, 50%, 24%); /*  */

--clr-noxor-blue-lighter: #00aeef; /*  */
--clr-noxor-blue-highlight:  hsl(217, 50%, 34%);/*  */

  --clr-candidate-1: #1f5c57; /* primary */
  --clr-candidate-2: #3f7671; /* monocromatic */
  --clr-candidate-3: #5c2d1f; /* complementary */
  --clr-candidate-4: #1f245c; /* analogous 1 */
  --clr-candidate-5: #215c1f; /* analogous 2 */
  --clr-candidate-6: #5c3c1f; /* split complementary 1 */
  --clr-candidate-7: #5c1f21; /* split complementary 2 */
  --clr-candidate-8: #5c1f21; /* triadic 1 */
  --clr-candidate-9: #5c1f40; /* triadic 2 */
  --clr-candidate-10: #5c2d1f; /* tetradic 1 */
  --clr-candidate-11: #5c4c1f; /* tetradic 2 */
  --clr-candidate-12: #3b1f5c; /* tetradic 3 */
  --clr-candidate-13: #788ab7; /*  */
  --clr-candidate-14: #334b49; /*  */
  --clr-candidate-15: #1a857f; /*  */
  --clr-candidate-16: #894130; /*  */
  --clr-candidate-17: #00759c; /*  */
  --clr-candidate-18: #5a2530; /*  */
  --clr-candidate-19: #52648f; /*  */
  --clr-candidate-20: #006089; /* rätt nice */
  --clr-candidate-21: #006b4a; /*  */
  --clr-candidate-22: #454f43; /*  */
  --clr-candidate-23: #114400; /*  */
  --clr-candidate-24: hsla(99, 50%, 15%); /* industrigrön rätt nice  */
  --clr-candidate-25: hsl(99, 50%, 20%); /* industrigrön rätt nice  */
  --clr-candidate-26: hsl(99, 50%, 35%); /* industrigrön rätt nice  */
  --clr-candidate-27: hsl(99, 50%, 25%); /* industrigrön rätt nice  */

  /* --ff-sans-serif: Arial, Helvetica, sans-serif;
  --ff-serif: 'Times New Roman', Times, serif;
  --fs-BIGGER: 47px;
  --fs-big: 23px;
  --fs-normal: 18px;
  --fs-small: 14px;

  --space-large: 2.5rem;
  --space-medium: 1.25rem;
  --space-small: 0.625rem; */
}
* {
  box-sizing: border-box;
}
body {
  color: var(--color-primary-text);

  font-family: Arial, Helvetica, sans-serif;
  font-size: 17px;
  font-weight: 500;
  margin: 0;
  padding: 0;
  line-height: 1.6rem; /* ? */
  min-width: 340px; /* ? */
}

img {
  max-width: 100%;
  height: auto;
}

footer {
  background-color: var(--color-primary);

  display: flex;
  justify-content: center; /* för att hålla allt centreat vid stora upplösningar */
  height: 60px;
  min-height: 150px;
  /* border-top: 2px solid hsl(175, 50%, 74%);  */
  border-top: 2px solid var(--color-primary-light); /* TODO: välj värg */
}

.nav-footer {
  color: white;
  display: flex;
  flex-grow: 1;
  padding: 50px;
  margin: 1rem;
  align-items: center;
  min-width: 340px;
  max-width: 1440px;
}

/* make space between elements in footer */
.nav-footer * {
  margin: 0.5rem;
}

.nav-footer a {
  /* redundant? */

  text-decoration: none;
  color: white;
}
footer a:hover {
  color: hsl(0, 0%, 80%); /* TODO: välj värg */
}
.footer-link-list {
  display: flex;
  margin-left: auto;
  padding: 0;
  list-style: none;
}
.footer-link {
  color: white;
}
.nexer-group-cards {
  background-color: var(--color-primary);
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding-bottom: 2rem;

}
.nexer-group-company-card-container {
  display: flex;
  flex-wrap: wrap;
  flex: 1;
  justify-content: center;
  max-width: 80%;
  max-width: 1440px; 
  padding: 0 50px;
}
.card-company {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 1rem;
  /* padding: 1rem; */
  /* border-radius: 0.5em; */
  /* border: 1px solid hsl(175, 50%, 74%); */
  /* TODO: välj värg border */
  /* border: 1px solid var(--color-primary-light);  */
  color: white;
  /* text-align: justify; */
  text-align: center;
  min-height: 350px;

  /* grid?*/
  /* flex: 1 1 calc(20% - 12px);  */
  flex: 10%; /* <-- lös snyggare */

  text-decoration: none;
  color: white;
}
.card-company img {
  /* border-radius: 0.5em; */
}

.card-company-text {
  margin-top: 2rem;
}
.card-link-text {
  /* fimpa? */
  display: none;
}
.card-company:hover {
  /* background-color: hsl(175, 50%, 29%); */
  background-color: var(--color-primary-light); /* TODO: välj värg */
  cursor: pointer;
  box-shadow: 0 0 0.5rem 0 var(--color-primary-light); 
}

.copyright {
  font-size: 0.7rem;
}

.contact-us-container {
  background-color: var(--color-primary);

  color: white;
  font-family: 'Open Sans Condensed';

  font-weight: 700;
  padding: 4em;
  line-height: normal;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 300px;
  /* height: 500px; */

  /* min-width: 340px; */
  /* border-bottom: 1px solid hsl(175, 50%, 74%); */ /* border? */
}

.question-contact-us {
  font-family: 'Open Sans Condensed';
  /* color: hsl(175, 50%, 74%); */
  color: var(--color-white); /* TODO: välj värg */
  text-align: center;
  font-size: 2.5rem;
  line-height: 1.2rem;
  margin: 0rem;
}
.title-contact-us {
  font-family: 'Open Sans Condensed';
  text-align: center;
  font-size: 4.5rem;
  margin: 0.8rem;
}

.contact-us-button {
  font-family: 'Open Sans Condensed';
  font-weight: 700;
  background-color: var(--color-primary-lighter); /* TODO: välj värg */
  border: none;
  color: white;
  font-size: 1.5rem;
  width: 400px;
  padding: 0.8em 1em 0.8em 1em;
  /* border-radius: 5px; */
  cursor: pointer;
  text-align: center;
}
.contact-us-button:hover {
  color: hsl(0, 0%, 90%);
  background-color: var(--color-primary-lighter-hover); /* TODO: välj värg */
}

/* media */

@media (max-width: 1200px) {
  .card-company {
    flex: 40%;
  }
  .nexer-group-company-card-container {
    max-width: 660px;
  }
  .card-link-text {
    display: none;
  }
  .copyright {
    display: none;
  }
}
@media (max-width: 900px) {
  /* Aimera? */
  /* .footer-link-list { */
  /* flex-wrap: wrap;  flytta upp?  */
  /* width: 265px; <-- lös snyggare */
  /* } */
  .footer-link-list {
    display: none;
  }
  .nav-footer {
    justify-content: center;
  }
}
@media (max-width: 660px) {
  .card-company {
    flex: 90%;
  }
  .nexer-group-company-card-container {
    max-width: 400px;
  }
}

